index.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Serif+4:ital,opsz,wght@0,8..60,400;0,8..60,700;1,8..60,400;1,8..60,700&display=swap');

/* Theme */

:root {
    --title-font: 'Playfair Display', sans-serif;
    --subtitle-font: 'Source Serif 4', sans-serif;
}

:root[color-scheme="light"] {
    --bg-color: #dfe3f1;
    --accent-color: #d02580;
    --title-color: #404459;
    --sub-bg-color: #ffffff;
    --content-color: #6b7a9a;
    --shadow-color: hsl(227, 40%, 51%, 0.3);
}

:root[color-scheme="dark"] {
    --bg-color: #20232d;
    --accent-color: #f173bf;
    --title-color: #e2e4f3;
    --sub-bg-color: #ffffff;
    --content-color: #818ca1;
    --shadow-color: hsla(226, 20%, 63%, 0.3);
}

/* Reset */

::selection {
    background: var(--shadow-color);
}

* {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

html, body {
    color: var(--title-color);
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    background-color: var(--bg-color);
}

/* Content */

main {
    width: 100%;
    height: 100%;
    display: flex;
    padding: 1rem;
    align-items: center;
    flex-direction: column;
    justify-content: center;
}

#colorScheme {
    position: fixed;
    top: 1em;
    right: 1em;
    background-color: var(--shadow-color);
    font-size: 1.2rem;
    width: 2.5rem;
    height: 2.5rem;
    border: none;
    cursor: pointer;
    border-radius: 50%;
    transition: scale .3s;
}

#colorScheme:hover {
    scale: 1.1;
}
#colorScheme:active {
    scale: 1;
}

main > img {
    width: clamp(120px, 30%, 180px);
    filter: saturate(10%) hue-rotate(-30deg);
    transition: 1.5s all;
    margin-top: -2.5rem;
    border-radius: 40%;
}

main > img:hover {
    filter: none;
    box-shadow: 10px 10px 50px 0px rgba(255, 103, 21, 0.3), -5px 10px 50px 0px rgba(17, 55, 243, 0.3), -5px -10px 50px 0px rgba(130, 233, 110, 0.3);
}

main > h1 {
    margin: 0;
    font-size: clamp(2.5rem, 7vw, 4.5rem);
    text-align: center;
    margin-top: 0.5em;
    font-family: var(--title-font);
    letter-spacing: -1px;
    transition: text-shadow 0.3s;
}

main > h1:hover {
    text-shadow: 0.06em 0.06em 0 var(--shadow-color);
}

main > p {
    color: var(--content-color);
    font-size: clamp(1.3rem, 3vw, 1.8rem);
    text-align: center;
    font-style: italic;
    margin-top: 0.5em;
    font-weight: normal;
    font-family: var(--subtitle-font);
}

main > a, section > a {
    color: var(--accent-color);
    font-size: 1.2rem;
    font-family: var(--subtitle-font);
    text-decoration: none;
}

@media (min-width: 650px) {
    main > a, section > a {
        font-size: 1.4rem;
    }
}

main > a:hover, section > a:hover {
    filter: saturate(150%);
}

section {
    max-width: 900px;
    margin: 2rem auto;
    padding: 2rem;
    text-align: center;
}

section > h2 {
    margin: 0;
    font-size: clamp(2rem, 6vw, 3.5rem);
    text-align: center;
    margin-top: 0.5em;
    font-family: var(--title-font);
    letter-spacing: -1px;
}

section > p {
    color: var(--content-color);
    font-size: clamp(1rem, 2vw, 1.6rem);
    text-align: center;
    font-style: italic;
    margin-top: 0.5em;
    font-weight: normal;
    font-family: var(--subtitle-font);
}

section > a {
    display: inline-block;
    padding: .5rem .8rem;
}

.grid {
    display: grid;
    gap: 1rem;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

.grid img {
    width: 100%;
    filter: saturate(10%) hue-rotate(-30deg);
    transition: 0.6s all;
    border-radius: 1rem;
    border: 4px solid transparent;
}

.grid img:hover {
    filter: none;
    border: 4px solid var(--accent-color);
}

#slides {
    padding-bottom: 7rem;
}

footer {
    width: 100%;
    bottom: 0;
    background-color: var(--bg-color);
    padding: 1rem 1rem 2rem 1rem;
    display: flex;
    position: fixed;
    justify-content: center;
}

footer > a {
    width: 4rem;
    height: 4rem;
    padding: 1em;
    display: flex;
    box-sizing: border-box;
    transition: 0.5s all;
    align-items: center;
    border-radius: 40%;
    justify-content: center;
}

footer > a > img {
    width: 100%;
}

footer > a:hover {
    opacity: 1;
    margin-top: -0.5rem;
    background-color: var(--sub-bg-color);
}

footer > a:active {
    transform: none;
    box-shadow: none;
    margin-top: 0;
}

footer > a:not(:last-child) {
    margin-right: 0.8rem;
}

/* Animations */

@keyframes appear {
    0% {
        opacity: 0;
        transform: translateY(20px);
    }
    100% {
        opacity: 1;
    }
}

main > img {
    opacity: 0;
    animation: 0.5s appear ease-in-out forwards;
}

main > h1 {
    opacity: 0;
    animation: 0.5s appear ease-in-out forwards 0.2s;
}

main > p {
    opacity: 0;
    animation: 0.5s appear ease-in-out forwards 0.4s;
}

main > a {
    opacity: 0;
    animation: 0.5s appear ease-in-out forwards 0.5s;
}

footer > * {
    opacity: 0;
    animation: 0.5s appear ease-in-out forwards calc(var(--footer-index, 0) * 0.1s + 0.7s);
}

@keyframes coucou {
    0% {
        transform: rotate(0deg);
    }
    5% {
        transform: rotate(15deg);
    }
    10% {
        transform: rotate(-15deg);
    }
    15% {
        transform: rotate(15deg);
    }
    20% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(0deg);
    }
}

#👋 {
    display: inline-block;
    animation: coucou 8s ease-in-out infinite 1.5s;
}

@media (prefers-reduced-motion) {
    * {
        animation-duration: 0;
        animation-delay: 0;
    }
}

